# MT-Telescope

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-linting.yml
telescope/: app.py  cli.py  plotting.py  testset.py
telescope/metrics/: __init__.py  metric.py
telescope/metrics/comet/: metric.py
telescope/metrics/doc_comet/: __init__.py  download_utils.py  metric.py  result.py
telescope/metrics/doc_comet/encoders/: bert.py  minilm.py  xlmr.py  xlmr_xl.py
telescope/metrics/doc_comet/models/: __init__.py  base.py  predict_pbar.py
telescope/metrics/doc_comet/models/ranking/: ranking_metric.py
telescope/metrics/doc_comet/models/regression/: referenceless.py  regression_metric.py
